antlrgen/eu/reitmayer/lang/entgen/EntGenParser.java
// $ANTLR 3.4 C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g 2012-06-24 16:01:23

package eu.reitmayer.lang.entgen;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class EntGenParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Digit", "ID", "INT", "Letter", "ML", "SL_COMMENT", "STRING", "WS", "'('", "')'", "','", "';'", "'DBTYPE'", "'DOMAIN'", "'ELEMENT'", "'ENTITY'", "'JTYPE'", "'KEY'", "'LENGTH'", "'LTEXT'", "'MTEXT'", "'PRECISION'", "'STEXT'"
    };

    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int Digit=4;
    public static final int ID=5;
    public static final int INT=6;
    public static final int Letter=7;
    public static final int ML=8;
    public static final int SL_COMMENT=9;
    public static final int STRING=10;
    public static final int WS=11;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public EntGenParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public EntGenParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return EntGenParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:16:1: prog : (s+= stat )+ ;
    public final EntGenParser.prog_return prog() throws RecognitionException {
        EntGenParser.prog_return retval = new EntGenParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        List list_s=null;
        RuleReturnScope s = null;

        try {
            // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:16:5: ( (s+= stat )+ )
            // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:17:2: (s+= stat )+
            {
            root_0 = (Object)adaptor.nil();


            // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:17:3: (s+= stat )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= 17 && LA1_0 <= 19)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:17:3: s+= stat
            	    {
            	    pushFollow(FOLLOW_stat_in_prog48);
            	    s=stat();

            	    state._fsp--;

            	    adaptor.addChild(root_0, s.getTree());
            	    if (list_s==null) list_s=new ArrayList();
            	    list_s.add(s.getTree());


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class stat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:20:1: stat : ( domain_stat ';' -> domain_stat | data_element_stat ';' -> data_element_stat | entity_stat ';' -> entity_stat );
    public final EntGenParser.stat_return stat() throws RecognitionException {
        EntGenParser.stat_return retval = new EntGenParser.stat_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal2=null;
        Token char_literal4=null;
        Token char_literal6=null;
        EntGenParser.domain_stat_return domain_stat1 =null;

        EntGenParser.data_element_stat_return data_element_stat3 =null;

        EntGenParser.entity_stat_return entity_stat5 =null;


        Object char_literal2_tree=null;
        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        RewriteRuleTokenStream stream_15=new RewriteRuleTokenStream(adaptor,"token 15");
        RewriteRuleSubtreeStream stream_data_element_stat=new RewriteRuleSubtreeStream(adaptor,"rule data_element_stat");
        RewriteRuleSubtreeStream stream_entity_stat=new RewriteRuleSubtreeStream(adaptor,"rule entity_stat");
        RewriteRuleSubtreeStream stream_domain_stat=new RewriteRuleSubtreeStream(adaptor,"rule domain_stat");
        try {
            // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:20:5: ( domain_stat ';' -> domain_stat | data_element_stat ';' -> data_element_stat | entity_stat ';' -> entity_stat )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 17:
                {
                alt2=1;
                }
                break;
            case 18:
                {
                alt2=2;
                }
                break;
            case 19:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:21:4: domain_stat ';'
                    {
                    pushFollow(FOLLOW_domain_stat_in_stat62);
                    domain_stat1=domain_stat();

                    state._fsp--;

                    stream_domain_stat.add(domain_stat1.getTree());

                    char_literal2=(Token)match(input,15,FOLLOW_15_in_stat64);  
                    stream_15.add(char_literal2);


                    // AST REWRITE
                    // elements: domain_stat
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 21:21: -> domain_stat
                    {
                        adaptor.addChild(root_0, stream_domain_stat.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:22:5: data_element_stat ';'
                    {
                    pushFollow(FOLLOW_data_element_stat_in_stat75);
                    data_element_stat3=data_element_stat();

                    state._fsp--;

                    stream_data_element_stat.add(data_element_stat3.getTree());

                    char_literal4=(Token)match(input,15,FOLLOW_15_in_stat77);  
                    stream_15.add(char_literal4);


                    // AST REWRITE
                    // elements: data_element_stat
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 22:27: -> data_element_stat
                    {
                        adaptor.addChild(root_0, stream_data_element_stat.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:23:5: entity_stat ';'
                    {
                    pushFollow(FOLLOW_entity_stat_in_stat87);
                    entity_stat5=entity_stat();

                    state._fsp--;

                    stream_entity_stat.add(entity_stat5.getTree());

                    char_literal6=(Token)match(input,15,FOLLOW_15_in_stat89);  
                    stream_15.add(char_literal6);


                    // AST REWRITE
                    // elements: entity_stat
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 23:21: -> entity_stat
                    {
                        adaptor.addChild(root_0, stream_entity_stat.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class domain_stat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "domain_stat"
    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:26:1: domain_stat : ( 'DOMAIN' ID -> ^( 'DOMAIN' ID ) | 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID -> ^( 'DOMAIN' ID ID ID ) | 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID 'LENGTH' INT -> ^( 'DOMAIN' ID ID ID INT ) | 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID 'LENGTH' INT 'PRECISION' INT -> ^( 'DOMAIN' ID ID ID INT INT ) );
    public final EntGenParser.domain_stat_return domain_stat() throws RecognitionException {
        EntGenParser.domain_stat_return retval = new EntGenParser.domain_stat_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal7=null;
        Token ID8=null;
        Token string_literal9=null;
        Token ID10=null;
        Token string_literal11=null;
        Token ID12=null;
        Token string_literal13=null;
        Token ID14=null;
        Token string_literal15=null;
        Token ID16=null;
        Token string_literal17=null;
        Token ID18=null;
        Token string_literal19=null;
        Token ID20=null;
        Token string_literal21=null;
        Token INT22=null;
        Token string_literal23=null;
        Token ID24=null;
        Token string_literal25=null;
        Token ID26=null;
        Token string_literal27=null;
        Token ID28=null;
        Token string_literal29=null;
        Token INT30=null;
        Token string_literal31=null;
        Token INT32=null;

        Object string_literal7_tree=null;
        Object ID8_tree=null;
        Object string_literal9_tree=null;
        Object ID10_tree=null;
        Object string_literal11_tree=null;
        Object ID12_tree=null;
        Object string_literal13_tree=null;
        Object ID14_tree=null;
        Object string_literal15_tree=null;
        Object ID16_tree=null;
        Object string_literal17_tree=null;
        Object ID18_tree=null;
        Object string_literal19_tree=null;
        Object ID20_tree=null;
        Object string_literal21_tree=null;
        Object INT22_tree=null;
        Object string_literal23_tree=null;
        Object ID24_tree=null;
        Object string_literal25_tree=null;
        Object ID26_tree=null;
        Object string_literal27_tree=null;
        Object ID28_tree=null;
        Object string_literal29_tree=null;
        Object INT30_tree=null;
        Object string_literal31_tree=null;
        Object INT32_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_16=new RewriteRuleTokenStream(adaptor,"token 16");

        try {
            // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:26:12: ( 'DOMAIN' ID -> ^( 'DOMAIN' ID ) | 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID -> ^( 'DOMAIN' ID ID ID ) | 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID 'LENGTH' INT -> ^( 'DOMAIN' ID ID ID INT ) | 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID 'LENGTH' INT 'PRECISION' INT -> ^( 'DOMAIN' ID ID ID INT INT ) )
            int alt3=4;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==17) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==20) ) {
                        int LA3_3 = input.LA(4);

                        if ( (LA3_3==ID) ) {
                            int LA3_5 = input.LA(5);

                            if ( (LA3_5==16) ) {
                                int LA3_6 = input.LA(6);

                                if ( (LA3_6==ID) ) {
                                    int LA3_7 = input.LA(7);

                                    if ( (LA3_7==22) ) {
                                        int LA3_8 = input.LA(8);

                                        if ( (LA3_8==INT) ) {
                                            int LA3_10 = input.LA(9);

                                            if ( (LA3_10==25) ) {
                                                alt3=4;
                                            }
                                            else if ( (LA3_10==15||LA3_10==26) ) {
                                                alt3=3;
                                            }
                                            else {
                                                NoViableAltException nvae =
                                                    new NoViableAltException("", 3, 10, input);

                                                throw nvae;

                                            }
                                        }
                                        else {
                                            NoViableAltException nvae =
                                                new NoViableAltException("", 3, 8, input);

                                            throw nvae;

                                        }
                                    }
                                    else if ( (LA3_7==15||LA3_7==26) ) {
                                        alt3=2;
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 3, 7, input);

                                        throw nvae;

                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 3, 6, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 5, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 3, input);

                            throw nvae;

                        }
                    }
                    else if ( (LA3_2==15||LA3_2==26) ) {
                        alt3=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:27:5: 'DOMAIN' ID
                    {
                    string_literal7=(Token)match(input,17,FOLLOW_17_in_domain_stat107);  
                    stream_17.add(string_literal7);


                    ID8=(Token)match(input,ID,FOLLOW_ID_in_domain_stat109);  
                    stream_ID.add(ID8);


                    // AST REWRITE
                    // elements: ID, 17
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 27:17: -> ^( 'DOMAIN' ID )
                    {
                        // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:27:20: ^( 'DOMAIN' ID )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_17.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:28:5: 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID
                    {
                    string_literal9=(Token)match(input,17,FOLLOW_17_in_domain_stat123);  
                    stream_17.add(string_literal9);


                    ID10=(Token)match(input,ID,FOLLOW_ID_in_domain_stat125);  
                    stream_ID.add(ID10);


                    string_literal11=(Token)match(input,20,FOLLOW_20_in_domain_stat127);  
                    stream_20.add(string_literal11);


                    ID12=(Token)match(input,ID,FOLLOW_ID_in_domain_stat129);  
                    stream_ID.add(ID12);


                    string_literal13=(Token)match(input,16,FOLLOW_16_in_domain_stat131);  
                    stream_16.add(string_literal13);


                    ID14=(Token)match(input,ID,FOLLOW_ID_in_domain_stat133);  
                    stream_ID.add(ID14);


                    // AST REWRITE
                    // elements: ID, 17, ID, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 28:41: -> ^( 'DOMAIN' ID ID ID )
                    {
                        // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:28:44: ^( 'DOMAIN' ID ID ID )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_17.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:29:5: 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID 'LENGTH' INT
                    {
                    string_literal15=(Token)match(input,17,FOLLOW_17_in_domain_stat152);  
                    stream_17.add(string_literal15);


                    ID16=(Token)match(input,ID,FOLLOW_ID_in_domain_stat154);  
                    stream_ID.add(ID16);


                    string_literal17=(Token)match(input,20,FOLLOW_20_in_domain_stat156);  
                    stream_20.add(string_literal17);


                    ID18=(Token)match(input,ID,FOLLOW_ID_in_domain_stat158);  
                    stream_ID.add(ID18);


                    string_literal19=(Token)match(input,16,FOLLOW_16_in_domain_stat160);  
                    stream_16.add(string_literal19);


                    ID20=(Token)match(input,ID,FOLLOW_ID_in_domain_stat162);  
                    stream_ID.add(ID20);


                    string_literal21=(Token)match(input,22,FOLLOW_22_in_domain_stat164);  
                    stream_22.add(string_literal21);


                    INT22=(Token)match(input,INT,FOLLOW_INT_in_domain_stat166);  
                    stream_INT.add(INT22);


                    // AST REWRITE
                    // elements: INT, 17, ID, ID, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 29:53: -> ^( 'DOMAIN' ID ID ID INT )
                    {
                        // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:29:56: ^( 'DOMAIN' ID ID ID INT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_17.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_INT.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 4 :
                    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:30:5: 'DOMAIN' ID 'JTYPE' ID 'DBTYPE' ID 'LENGTH' INT 'PRECISION' INT
                    {
                    string_literal23=(Token)match(input,17,FOLLOW_17_in_domain_stat186);  
                    stream_17.add(string_literal23);


                    ID24=(Token)match(input,ID,FOLLOW_ID_in_domain_stat188);  
                    stream_ID.add(ID24);


                    string_literal25=(Token)match(input,20,FOLLOW_20_in_domain_stat190);  
                    stream_20.add(string_literal25);


                    ID26=(Token)match(input,ID,FOLLOW_ID_in_domain_stat192);  
                    stream_ID.add(ID26);


                    string_literal27=(Token)match(input,16,FOLLOW_16_in_domain_stat194);  
                    stream_16.add(string_literal27);


                    ID28=(Token)match(input,ID,FOLLOW_ID_in_domain_stat196);  
                    stream_ID.add(ID28);


                    string_literal29=(Token)match(input,22,FOLLOW_22_in_domain_stat198);  
                    stream_22.add(string_literal29);


                    INT30=(Token)match(input,INT,FOLLOW_INT_in_domain_stat200);  
                    stream_INT.add(INT30);


                    string_literal31=(Token)match(input,25,FOLLOW_25_in_domain_stat202);  
                    stream_25.add(string_literal31);


                    INT32=(Token)match(input,INT,FOLLOW_INT_in_domain_stat204);  
                    stream_INT.add(INT32);


                    // AST REWRITE
                    // elements: ID, INT, ID, INT, ID, 17
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 30:69: -> ^( 'DOMAIN' ID ID ID INT INT )
                    {
                        // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:30:72: ^( 'DOMAIN' ID ID ID INT INT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_17.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_INT.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_INT.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "domain_stat"


    public static class data_element_stat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "data_element_stat"
    // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:33:1: data_element_stat : ( 'ELEMENT' ID -> ^( 'ELEMENT' ID ) | 'ELEMENT' ID d= domain_stat 'STEXT' STRING -> ^( 'ELEMENT' ID $d STRING ) | 'ELEMENT' ID d2= domain_stat 'STEXT' STRING 'MTEXT' STRING -> ^( 'ELEMENT' ID $d2 STRING STRING ) | 'ELEMENT' ID d3= domain_stat 'STEXT' STRING 'MTEXT' STRING 'LTEXT' STRING -> ^( 'ELEMENT' ID $d3 STRING STRING STRING ) );
    public final EntGenParser.data_element_stat_return data_element_stat() throws RecognitionException {
        EntGenParser.data_element_stat_return retval = new EntGenParser.data_element_stat_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal33=null;
        Token ID34=null;
        Token string_literal35=null;
        Token ID36=null;
        Token string_literal37=null;
        Token STRING38=null;
        Token string_literal39=null;
        Token ID40=null;
        Token string_literal41=null;
        Token STRING42=null;
        Token string_literal43=null;
        Token STRING44=null;
        Token string_literal45=null;
        Token ID46=null;
        Token string_literal47=null;
        Token STRING48=null;
        Token string_literal49=null;
        Token STRING50=null;
        Token string_literal51=null;
        Token STRING52=null;
        EntGenParser.domain_stat_return d =null;

        EntGenParser.domain_stat_return d2 =null;

        EntGenParser.domain_stat_return d3 =null;


        Object string_literal33_tree=null;
        Object ID34_tree=null;
        Object string_literal35_tree=null;
        Object ID36_tree=null;
        Object string_literal37_tree=null;
        Object STRING38_tree=null;
        Object string_literal39_tree=null;
        Object ID40_tree=null;
        Object string_literal41_tree=null;
        Object STRING42_tree=null;
        Object string_literal43_tree=null;
        Object STRING44_tree=null;
        Object string_literal45_tree=null;
        Object ID46_tree=null;
        Object string_literal47_tree=null;
        Object STRING48_tree=null;
        Object string_literal49_tree=null;
        Object STRING50_tree=null;
        Object string_literal51_tree=null;
        Object STRING52_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");
        RewriteRuleSubtreeStream stream_domain_stat=new RewriteRuleSubtreeStream(adaptor,"rule domain_stat");
        try {
            // C:\\Users\\franz\\workspace\\EntityGenerator\\src\\eu\\reitmayer\\lang\\entgen\\EntGen.g:33:18: ( 'ELEMENT' ID -> ^( 'ELEMENT' ID ) | 'ELEMENT' ID d= domain_stat 'STEXT' STRING -> ^( 'ELEMENT' ID $d STRING ) | 'ELEMENT' ID d2= domain_stat 'STEXT' STRING 'MTEXT' STRING -> ^( 'ELEMENT' ID $d2 STRING STRING ) | 'ELEMENT' ID d3= domain_stat 'STEXT' STRING 'MTEXT' STRING 'LTEXT' STRING -> ^( 'ELEMENT' ID $d3 STRING STRING STRING ) )
            int alt4=4;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==18) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==ID) ) {
                    int LA4_2 = input.LA(3);

                    if ( ((LA4_2 >= 13 && LA4_2 <= 15)) ) {
                        alt4=1;
                    }
                    else if ( (LA4_2==17) ) {
                        int LA4_4 = input.LA(4);

                        if ( (LA4_4==ID) ) {
                            int LA4_5 = input.LA(5);

                            if ( (LA4_5==20) ) {
                                int LA4_6 = input.LA(6);

                                if ( (LA4_6==ID) ) {
                                    int LA4_8 = input.LA(7);

                                    if ( (LA4_8==16) ) {
                                        int LA4_10 = input.LA(8);

                                        if ( (LA4_10==ID) ) {
                                            int LA4_13 = input.LA(9);

                                            if ( (LA4_13==22) ) {
                                                int LA4_15 = input.LA(10);

                                                if ( (LA4_15==INT) ) {
                                                    int LA4_18 = input.LA(11);

                                                    if ( (LA4_18==25) ) {
                                                        int LA4_19 = input.LA(12);

                                                        if ( (LA4_19==INT) ) {
                                                            int LA4_20 = input.LA(13);

                                                            if ( (LA4_20==26) ) {
